--- a/style.css
+++ b/style.css
@@ -159,14 +159,21 @@ aside ul {
 }
 
 div.video {
-  background-color: var(--cor-secundaria);
-  margin: 0px -15px 20px -15px;
-  padding: 20px;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 56.25%; ;
+  border: 15px solid var(--cor-secundaria);
+  margin-bottom: 20px;
+  margin-left: -15px;
 }
 
 div.video > iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 400px;
+  height: 100%;
 }
 
 footer {
